--- a/dark.style.css
+++ b/dark.style.css
@@ -550,6 +550,10 @@
   color: var(--ttg-accent);
 }
 
+.HFJjfe .MNVeFb {
+  color: var(--ttg-accent);
+}
+
 /* speaker indicator */
 .rd55Rb {
   background-color: var(--ttg-accent);
