lower hand button

--- a/dark.style.css
+++ b/dark.style.css
@@ -145,6 +145,11 @@
   color: var(--ttg-accent);
 }
 
+/* lower hand button */
+.p2SYhf.SNTzF .OCZA0d, .p2SYhf.SNTzF .sPXonc {
+  color: var(--ttg-accent);
+}
+
 /* menu dots */
 .c7fp5b {
   color: #ddd;
